fix(gateway): fix Java compilation error
Java's ArrayList.removeLast() method is introduced in Java 21 but
stable/8.3 branch uses Java 17. I replaced the code with the Java 17 style.